# zipper

./: .gitignore  README.md  demo.py  metadata.json  pyproject.toml
docs/: index.md  package-lock.json  package.json  tsconfig.json
docs/.vitepress/: config.ts
docs/guide/: getting-started.md  installation.md
docs/reference/: api.md  implementation.md
tests/: conftest.py  test_cli.py  test_core.py  test_zipper.py
zipper/: __init__.py  cli.py  core.py
